[project]
name = "ahh_python"
version = "0.0.1"
authors = [
  { name="Abhishek Govindarasu", email="abhishekgovindarasu@gmail.com" },
]
description = "Ahh utilities."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/abhishekg999/ahh-python"
Issues = "https://github.com/abhishekg999/ahh-python/issues"